--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>Hello, World!</h1>
   <p>This is a paragraph.</p>
-  
+  <img src="index.jpg" alt="Girl in a jacket" width="500" height="600"> 
 </body>
 </html>
